--- a/libraries/eosiolib/CMakeLists.txt
+++ b/libraries/eosiolib/CMakeLists.txt
@@ -14,6 +14,10 @@ add_library(eosio_dsm
             simple_malloc.cpp
             ${HEADERS})
 
+add_library(eosio_cmem
+            memory.cpp
+            ${HEADERS})
+
 add_native_library(native_eosio
                    eosiolib.cpp
                    crypto.cpp
@@ -27,7 +31,7 @@ target_include_directories(eosio PUBLIC
                                  ${CMAKE_SOURCE_DIR}/libc/musl/src/internal
                                  ${CMAKE_SOURCE_DIR}/libc/musl/src/crypt
                                  ${CMAKE_SOURCE_DIR}/libc/musl/arch/eos
-                                 {CMAKE_SOURCE_DIR}/libcxx/include
+                                 ${CMAKE_SOURCE_DIR}/libcxx/include
                                  ${CMAKE_SOURCE_DIR}
                                  ${CMAKE_SOURCE_DIR}/boost/include)
 
@@ -37,6 +41,7 @@ add_dependencies( native_eosio eosio )
 add_custom_command( TARGET eosio POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:eosio> ${BASE_BINARY_DIR}/lib )
 add_custom_command( TARGET eosio_malloc POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:eosio_malloc> ${BASE_BINARY_DIR}/lib )
 add_custom_command( TARGET eosio_dsm POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:eosio_dsm> ${BASE_BINARY_DIR}/lib )
+add_custom_command( TARGET eosio_cmem POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:eosio_cmem> ${BASE_BINARY_DIR}/lib )
 add_custom_command( TARGET native_eosio POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:native_eosio> ${BASE_BINARY_DIR}/lib )
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/../eosiolib DESTINATION ${BASE_BINARY_DIR}/include FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
