--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -1,6 +1,7 @@
 list(APPEND CMAKE_MODULE_PATH ${EOSIO_CDT_BIN})
 include(EosioCDTMacros)
 
+#add_native_executable(eostring_tests eostring_tests.cpp)
 add_native_executable(name_tests name_tests.cpp)
 add_native_executable(system_tests system_tests.cpp)
 add_native_executable(rope_tests rope_tests.cpp)
