--- a/tools/cc/eosio-cpp.cpp.in
+++ b/tools/cc/eosio-cpp.cpp.in
@@ -195,8 +195,13 @@ int main(int argc, const char **argv) {
          llvm::sys::path::system_temp_directory(true, res);
          std::string tmp_file = std::string(res.c_str())+"/"+llvm::sys::path::filename(input).str();
          std::string output;
-         
+
          generate(opts.comp_options, input, opts.abigen_contract, opts.abigen_resources, opts.abigen);
+
+         auto src = SmallString<64>(input);
+         llvm::sys::path::remove_filename(src);
+         std::string source_path = src.str().empty() ? "." : src.str();
+         new_opts.insert(new_opts.begin(), "-I" + source_path);
 
          if (llvm::sys::fs::exists(tmp_file)) {
             input = tmp_file;
