--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -5,11 +5,11 @@ add_native_executable( asset_tests asset_tests.cpp )
 add_native_executable( binary_extension_tests binary_extension_tests.cpp )
 add_native_executable( crypto_tests crypto_tests.cpp )
 add_native_executable( datastream_tests datastream_tests.cpp )
-add_native_executable( eostring_tests eostring_tests.cpp )
 add_native_executable( fixed_bytes_tests fixed_bytes_tests.cpp )
 add_native_executable( name_tests name_tests.cpp )
 add_native_executable( rope_tests rope_tests.cpp )
 add_native_executable( serialize_tests serialize_tests.cpp )
+add_native_executable( string_tests string_tests.cpp )
 add_native_executable( symbol_tests symbol_tests.cpp )
 add_native_executable( system_tests system_tests.cpp )
 add_native_executable( rope_tests rope_tests.cpp )
