--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,7 +1,7 @@
 {
     "eosio-dot-cdt":
     {
-        "pipeline-branch": "master",
+        "pipeline-branch": "zach-cdt-fixes",
         "dependencies": // dependencies to pull for cdt integration tests, by branch, tag, or commit hash
         {
             "eosio": "release/1.7.x"
