Add support for sccache and ccache to CMake

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,17 @@
+find_program(SCCACHE_FOUND sccache)
+if (SCCACHE_FOUND)
+   message(STATUS "Using sccache")
+   set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE sccache)
+   set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK sccache)
+else()
+   find_program(CCACHE_FOUND ccache)
+   if (CCACHE_FOUND)
+      message(STATUS "Using ccache")
+      set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+      set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
+   endif()
+endif()
+
 add_test( asset_tests ${CMAKE_BINARY_DIR}/tests/unit/asset_tests )
 set_property(TEST asset_tests PROPERTY LABELS unit_tests)
 add_test( binary_extension_tests ${CMAKE_BINARY_DIR}/tests/unit/binary_extension_tests )
