--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,11 +3,18 @@ find_package(LLVM REQUIRED CONFIG)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
-find_program(CCACHE_FOUND ccache)
-if (CCACHE_FOUND)
-   message(STATUS "Using ccache")
-   set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
-   set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
+find_program(SCCACHE_FOUND sccache)
+if (SCCACHE_FOUND)
+   message(STATUS "Using sccache")
+   set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE sccache)
+   set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK sccache)
+else()
+   find_program(CCACHE_FOUND ccache)
+   if (CCACHE_FOUND)
+      message(STATUS "Using ccache")
+      set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+      set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
+   endif()
 endif()
 
 include_directories(${LLVM_INCLUDE_DIRS})
