--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,16 @@
 cmake_minimum_required(VERSION 3.5)
+
+# Sanity check our source directory to make sure that we are not trying to
+# generate an in-source build, and to make
+# sure that we don't have any stray generated files lying around in the tree
+if( CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
+  message(FATAL_ERROR "In-source builds are not allowed.
+Please create a directory and run cmake from there, passing the path
+to this source directory as the last argument.
+This process created the file `CMakeCache.txt' and the directory `CMakeFiles'.
+Please delete them.")
+endif()
+
 project(eosio_cdt)
 
 find_program(SCCACHE_FOUND sccache)
