Handle `-x` compile option

--- a/tools/include/compiler_options.hpp.in
+++ b/tools/include/compiler_options.hpp.in
@@ -635,6 +635,10 @@ static Options CreateOptions(bool add_defaults=true) {
    }
    if(g_opt)
       copts.emplace_back("-g");
+   if (!x_opt.empty()) {
+      // x_opt should precede input files
+      copts.insert(copts.begin(), "-x"+x_opt);
+   }
    if (color_diag_opt) {
       copts.emplace_back("-fcolor-diagnostics");
    }
