Add an attempt at "installing" the tester

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -77,5 +77,6 @@ add_subdirectory(cc)
 add_subdirectory(ld)
 add_subdirectory(init)
 add_subdirectory(external)
+add_subdirectory(integration-tester)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/compiler_options.hpp.in ${CMAKE_BINARY_DIR}/compiler_options.hpp)
