Add toolchain tests to ctest

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -39,6 +39,9 @@ set_property(TEST time_tests PROPERTY LABELS unit_tests)
 add_test( varint_tests ${CMAKE_BINARY_DIR}/tests/unit/varint_tests )
 set_property(TEST varint_tests PROPERTY LABELS unit_tests)
 
+add_test( NAME toolchain_tests COMMAND ${CMAKE_BINARY_DIR}/tools/toolchain-tester/toolchain-tester ${CMAKE_SOURCE_DIR}/tests/toolchain )
+set_property(TEST toolchain_tests PROPERTY LABELS toolchain_tests)
+
 if (eosio_FOUND AND EOSIO_RUN_INTEGRATION_TESTS)
    add_test(integration_tests ${CMAKE_BINARY_DIR}/tests/integration/integration_tests)
    set_property(TEST integration_tests PROPERTY LABELS integration_tests)
