--- a/tools/cc/eosio-cpp.cpp.in
+++ b/tools/cc/eosio-cpp.cpp.in
@@ -184,7 +184,12 @@ int main(int argc, const char **argv) {
          std::string output;
 
          if (!opts.pp_only) {
-            generate(opts.comp_options, input, opts.abigen_contract, opts.abigen_resources, opts.abigen);
+            auto tool_opts = opts.comp_options;
+            std::set<std::string> non_tool_opts = { "-S", "-emit-llvm" };
+            tool_opts.erase(std::remove_if(tool_opts.begin(), tool_opts.end(),
+                                           [&](const auto& opt){ return non_tool_opts.count(opt); }),
+                            tool_opts.end());
+            generate(tool_opts, input, opts.abigen_contract, opts.abigen_resources, opts.abigen);
 
             auto src = SmallString<64>(input);
             llvm::sys::path::remove_filename(src);
