Track ricardian file dependencies.  add_dependencies does not for for ordinary files.  Fixes #455.  Fixes #309.

--- a/modules/EosioCDTMacros.cmake.in
+++ b/modules/EosioCDTMacros.cmake.in
@@ -5,11 +5,14 @@ if (NOT EOSIO_WASM_OLD_BEHAVIOR STREQUAL "On")
       get_target_property(BINOUTPUT ${TARGET} BINARY_DIR)
       target_compile_options( ${TARGET} PUBLIC -abigen_output=${BINOUTPUT}/${TARGET}.abi )
       target_compile_options( ${TARGET} PUBLIC -contract ${CONTRACT_NAME} )
+      file(GLOB contracts ${CMAKE_CURRENT_SOURCE_DIR}/${CONTRACT_NAME}.contracts.md ${CMAKE_CURRENT_SOURCE_DIR}/${CONTRACT_NAME}.clauses.md)
+      set_source_files_properties(${ARGN} PROPERTIES OBJECT_DEPENDS ${contracts})
    endmacro()
    macro (target_ricardian_directory TARGET DIR)
       target_compile_options( ${TARGET} PUBLIC -R${DIR} )
       file(GLOB contracts ${DIR}/*.contracts.md ${DIR}/*.clauses.md)
-      add_dependencies( ${TARGET} ${contracts} )
+      get_target_property(contract_sources ${TARGET} SOURCES)
+      set_source_files_properties(${contract_sources} PROPERTIES OBJECT_DEPENDS ${contracts})
    endmacro()
 
 else()
@@ -19,11 +22,14 @@ else()
       get_target_property(BINOUTPUT ${TARGET}.wasm BINARY_DIR)
       target_compile_options( ${TARGET}.wasm PUBLIC -abigen_output=${BINOUTPUT}/${TARGET}.abi )
       target_compile_options( ${TARGET}.wasm PUBLIC -contract ${CONTRACT_NAME} )
+      file(GLOB contracts ${CMAKE_CURRENT_SOURCE_DIR}/${CONTRACT_NAME}.contracts.md ${CMAKE_CURRENT_SOURCE_DIR}/${CONTRACT_NAME}.clauses.md)
+      set_source_files_properties(${ARGN} PROPERTIES OBJECT_DEPENDS ${contracts})
    endmacro()
    macro (target_ricardian_directory TARGET DIR)
       target_compile_options( ${TARGET}.wasm PUBLIC -R${DIR} )
       file(GLOB contracts ${DIR}/*.contracts.md ${DIR}/*.clauses.md)
-      add_dependencies( ${TARGET}.wasm ${contracts} )
+      get_target_property(contract_sources ${TARGET}.wasm SOURCES)
+      set_source_files_properties(${contract_sources} PROPERTIES OBJECT_DEPENDS ${contracts})
    endmacro()
 endif()
 
