Fix build errors when there isn't a ricardian contract.

--- a/modules/EosioCDTMacros.cmake.in
+++ b/modules/EosioCDTMacros.cmake.in
@@ -6,13 +6,17 @@ if (NOT EOSIO_WASM_OLD_BEHAVIOR STREQUAL "On")
       target_compile_options( ${TARGET} PUBLIC -abigen_output=${BINOUTPUT}/${TARGET}.abi )
       target_compile_options( ${TARGET} PUBLIC -contract ${CONTRACT_NAME} )
       file(GLOB contracts ${CMAKE_CURRENT_SOURCE_DIR}/${CONTRACT_NAME}.contracts.md ${CMAKE_CURRENT_SOURCE_DIR}/${CONTRACT_NAME}.clauses.md)
-      set_source_files_properties(${ARGN} PROPERTIES OBJECT_DEPENDS ${contracts})
+      if(contracts)
+         set_source_files_properties(${ARGN} PROPERTIES OBJECT_DEPENDS ${contracts})
+      endif()
    endmacro()
    macro (target_ricardian_directory TARGET DIR)
       target_compile_options( ${TARGET} PUBLIC -R${DIR} )
       file(GLOB contracts ${DIR}/*.contracts.md ${DIR}/*.clauses.md)
       get_target_property(contract_sources ${TARGET} SOURCES)
-      set_source_files_properties(${contract_sources} PROPERTIES OBJECT_DEPENDS ${contracts})
+      if(contracts)
+         set_source_files_properties(${contract_sources} PROPERTIES OBJECT_DEPENDS ${contracts})
+      endif()
    endmacro()
 
 else()
@@ -23,13 +27,17 @@ else()
       target_compile_options( ${TARGET}.wasm PUBLIC -abigen_output=${BINOUTPUT}/${TARGET}.abi )
       target_compile_options( ${TARGET}.wasm PUBLIC -contract ${CONTRACT_NAME} )
       file(GLOB contracts ${CMAKE_CURRENT_SOURCE_DIR}/${CONTRACT_NAME}.contracts.md ${CMAKE_CURRENT_SOURCE_DIR}/${CONTRACT_NAME}.clauses.md)
-      set_source_files_properties(${ARGN} PROPERTIES OBJECT_DEPENDS ${contracts})
+      if(contracts)
+         set_source_files_properties(${ARGN} PROPERTIES OBJECT_DEPENDS ${contracts})
+      endif()
    endmacro()
    macro (target_ricardian_directory TARGET DIR)
       target_compile_options( ${TARGET}.wasm PUBLIC -R${DIR} )
       file(GLOB contracts ${DIR}/*.contracts.md ${DIR}/*.clauses.md)
       get_target_property(contract_sources ${TARGET}.wasm SOURCES)
-      set_source_files_properties(${contract_sources} PROPERTIES OBJECT_DEPENDS ${contracts})
+      if(contracts)
+         set_source_files_properties(${contract_sources} PROPERTIES OBJECT_DEPENDS ${contracts})
+      endif()
    endmacro()
 endif()
 
