--- a/tools/include/compiler_options.hpp.in
+++ b/tools/include/compiler_options.hpp.in
@@ -362,6 +362,11 @@ struct Options {
 static void GetCompDefaults(std::vector<std::string>& copts) {
    const char* eosio_apply_suff = "${CMAKE_SHARED_LIBRARY_SUFFIX}";
    std::string apply_lib;
+   // add the define for whether this is compiling with CDT and version macros
+   copts.emplace_back("-D__eosio_cdt__");
+   copts.emplace_back(std::string("-D__eosio_cdt_major__=")+"${VERSION_MAJOR}");
+   copts.emplace_back(std::string("-D__eosio_cdt_minor__=")+"${VERSION_MINOR}");
+   copts.emplace_back(std::string("-D__eosio_cdt_patchlevel__=")+"${VERSION_PATCH}");
    if (!fnative_opt) {
       copts.emplace_back("--target=wasm32");
       copts.emplace_back("-ffreestanding");
@@ -380,6 +385,7 @@ static void GetCompDefaults(std::vector<std::string>& copts) {
       if (!fasm_opt) {
          copts.emplace_back("-fno-builtin");
          copts.emplace_back("-mstackrealign");
+         copts.emplace_back("-D__eosio_cdt_native__");
          copts.emplace_back("-DEOSIO_NATIVE");
          copts.emplace_back("-DLLP64");
       }
