--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Unit Test
         run: | 
           tar -xzf amazon_linux-2-build/build.tar.gz
-          ./.cicd/test.sh
+          ./.cicd/tests.sh
         env:
           IMAGE_TAG: amazonlinux-2
   amazon_linux-2-toolchain-test:
@@ -108,7 +108,7 @@ jobs:
       - name: Unit Test
         run: | 
           tar -xzf centos-77-build/build.tar.gz
-          ./.cicd/test.sh
+          ./.cicd/tests.sh
         env:
           IMAGE_TAG: centos-7.7
   centos-77-toolchain-test:
@@ -169,7 +169,7 @@ jobs:
       - name: Unit Test
         run: | 
           tar -xzf ubuntu-1604-build/build.tar.gz
-          ./.cicd/test.sh
+          ./.cicd/tests.sh
         env:
           IMAGE_TAG: ubuntu-16.04
   ubuntu-1604-toolchain-test:
@@ -230,7 +230,7 @@ jobs:
       - name: Unit Test
         run: | 
           tar -xzf ubuntu-1804-build/build.tar.gz
-          ./.cicd/test.sh
+          ./.cicd/tests.sh
         env:
           IMAGE_TAG: ubuntu-18.04
   ubuntu-1804-toolchain-test:
@@ -291,7 +291,7 @@ jobs:
         run: | 
           brew install git automake libtool wget cmake gmp gettext doxygen graphviz lcov python@3
           tar -xzf macos-1015-build/build.tar.gz
-          ./.cicd/test.sh
+          ./.cicd/tests.sh
   macos-1015-toolchain-test:
     name: MacOS 10.15 | Toolchain Test
     runs-on: macos-latest
